# packages/laravel/tests/Fixtures/golden/workbench.openapi.json
@@ -797,17 +797,6 @@
                   "self"
                 ]
               },
-              "relationships": {
-                "type": "object",
-                "properties": {
-                  "author": {
-                    "type": "string"
-                  }
-                },
-                "required": [
-                  "author"
-                ]
-              },
               "type": {
                 "type": "string"
               }
